--- a/LPEnBici/WebContent/LoginUsuario.xhtml
+++ b/LPEnBici/WebContent/LoginUsuario.xhtml
@@ -5,10 +5,15 @@
  	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	template="WEB-INF/facelets/templates/defaultLayout.xhtml" >
+	
 
 
 	<ui:define name="encabezado">
 		<ui:include src="WEB-INF/facelets/header/headerUsuario.xhtml" />
 	</ui:define>
+
+<!-- 	<ui:define name="contenido">
+		<ui:include src="WEB-INF/facelets/body/bodyLoginUsuario.xhtml"/>
+	</ui:define> -->
 
 </ui:composition>
