--- a/LPEnBici/WebContent/AdministracionBicicletas.xhtml
+++ b/LPEnBici/WebContent/AdministracionBicicletas.xhtml
@@ -4,15 +4,16 @@
 <ui:composition
  	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	template="WEB-INF/facelets/templates/LayoutAdmin.xhtml">
-	<!-- template="WEB-INF/facelets/templates/defaultLayout.xhtml" -->
-	
+	template="WEB-INF/facelets/templates/LayoutAdmin.xhtml"
+	 >
+<!-- template="WEB-INF/facelets/templates/defaultLayout.xhtml"  -->
+
 	<ui:define name="encabezado">
 		<ui:include src="WEB-INF/facelets/header/headerAdmin.xhtml" />
 	</ui:define>
 
 	<!-- <ui:define name="contenido">
-		<ui:include src="WEB-INF/facelets/body/bodyPerfilAdministrador.xhtml"/>
+		<ui:include src="WEB-INF/facelets/body/bodyAdministracionBicicletas.xhtml"/>
 	</ui:define> -->
 	
 	<ui:define name="panelIzqAdmin">
@@ -20,8 +21,8 @@
 	</ui:define>
 
 	<ui:define name="panelDerAdmin">
-		<ui:include src="WEB-INF/facelets/body/bodyPerfilAdministrador.xhtml"/>
+		<ui:include src="WEB-INF/facelets/body/bodyAdministracionBicicletas.xhtml"/>
 	</ui:define>
-
+	
 
 </ui:composition>
