--- a/LPEnBici/WebContent/LoginUsuario.xhtml
+++ b/LPEnBici/WebContent/LoginUsuario.xhtml
@@ -12,8 +12,8 @@
 		<ui:include src="WEB-INF/facelets/header/headerUsuario.xhtml" />
 	</ui:define>
 
-<!-- 	<ui:define name="contenido">
+ 	<ui:define name="contenido">
 		<ui:include src="WEB-INF/facelets/body/bodyLoginUsuario.xhtml"/>
-	</ui:define> -->
+	</ui:define> 
 
 </ui:composition>
