--- a/LPEnBici/WebContent/WEB-INF/facelets/body/bodyPanelAdmin.xhtml
+++ b/LPEnBici/WebContent/WEB-INF/facelets/body/bodyPanelAdmin.xhtml
@@ -67,6 +67,14 @@
 					icon="ui-icon-star" />
 			</p:submenu>
 			<p:separator />
+			<p:submenu label="Estaciones">
+
+				<p:menuitem value="Listado" icon="ui-icon-star"
+					outcome="AdministracionBicicletas.xhtml" />
+				<p:menuitem value="Nueva estacion" outcome="AltaEstacion.xhtml"
+					icon="ui-icon-star" />
+			</p:submenu>
+			<p:separator />
 			<p:submenu label="Estadisticas">
 				<p:menuitem value="Estadisticas" outcome="EstadisticasAdmin.html"
 					icon="ui-icon-star" />
