Continuación entrega final
Verificar las posibilidades de poder estacionar o retirar bicicleta

ALQUILERES HISTORICOS PARA EL USUARIO
-> ADMINISTRADOR PUEDE VER ALQUILERES HISTORICOS Y ACTIVOS
si la estacion no esta operativa, el usuario no puede ver las bicicletas
lo mismo con las bicicletas

chequear devolucion de bicicletas en la misma estacion

--- a/LPEnBici/WebContent/WEB-INF/facelets/body/bodyAlquilerUsuario.xhtml
+++ b/LPEnBici/WebContent/WEB-INF/facelets/body/bodyAlquilerUsuario.xhtml
@@ -30,7 +30,7 @@
 			value="#{PersonaBean.listaAlquileres}"
 			widgetVar="tablaAlquileres"
 			emptyMessage="No se encontraron bicicletas con ese criterio."
-			filteredValue="#{BicicletaBean.alquileresFiltrados}">
+			filteredValue="#{PersonaBean.alquileresFiltrados}">
 
 
 			<f:facet name="header">
@@ -91,16 +91,16 @@
 
 			<p:outputPanel id="detalleAlquiler" style="text-align:center;">
 
-				<p:panelGrid columns="2"
+				<p:panelGrid columns="2" rendered="#{not empty PersonaBean.alquilerSeleccionado}"
 					columnClasses="label,value">
 					
 					<h:outputText value="Patente: " />
-					<h:outputText value="#{alquilerSeleccionado.bicicleta.patente}" />
+					<h:outputText value="#{PersonaBean.alquilerSeleccionado.bicicleta.patente}" />
 
 
 					<p:outputLabel for="estacion" value="Estacion: " />
 					<p:selectOneMenu required="true" id="estacion"
-						value="#{alquilerSeleccionado.estacionEntrada.nombre}"
+						value="#{PersonaBean.alquilerSeleccionado.nombreEstacionEntrada}"
 						style="width:150px">
 						<f:selectItem itemLabel="Seleccionar" itemValue=""
 							noSelectionOption="true" />
@@ -112,7 +112,7 @@
 					
 
 					<h:outputText value="Denuncia: " />
-					<p:inputTextarea value="PersonaBean.denuncia.comentario"/>
+					<p:inputTextarea value="#{PersonaBean.denuncia.comentario}"/>
 
 					<p:commandButton value="Aceptar" ajax="false" id="aceptar"
 						action="#{PersonaBean.devolverBicicleta}" icon="ui-icon-check"
