Continuación entrega final
Arreglo de poder modificar el nombre y apellido:
- index.xhtml
- perfilUsuario.xhtml
- perfilAdministrador.xhtml

Agregado de shortcut icon -> al lado del titulo "¡La Plata en Bici" --
solamente se agregó en los layouts

Intento de poner las estaciones disponibles en el bodyLoginAdmin.
Funciona en el archivo MapaBean.xhtml pero no en el template. No se
porque

Backup del viejo bodyLoginAdmin.xhtml

--- a/LPEnBici/WebContent/WEB-INF/facelets/body/bodyPerfilUsuario.xhtml
+++ b/LPEnBici/WebContent/WEB-INF/facelets/body/bodyPerfilUsuario.xhtml
@@ -60,7 +60,7 @@
 					validatorMessage="Nombre: caracteres alfabeticos | Long. minima: 4 | Long. maxima: 20"
 					required="true">
 					<f:validateLength minimum="3" maximum="20" />
-					<f:validateRegex pattern="[a-zA-Z]+" />
+					<f:validateRegex pattern="[a-zA-Z ]*"/>
 				</p:inputText>
 
 
@@ -69,7 +69,7 @@
 					validatorMessage="Apellido: caracteres alfabeticos | Long. minima: 4 | Long. maxima: 20"
 					required="true">
 					<f:validateLength minimum="3" maximum="20" />
-					<f:validateRegex pattern="[a-zA-Z]+" />
+					<f:validateRegex pattern="[a-zA-Z ]*"/>
 				</p:inputText>
 				<!-- <p:messages for="apellido"/> -->
 
