--- a/LPEnBici/WebContent/LoginAdministrador.xhtml
+++ b/LPEnBici/WebContent/LoginAdministrador.xhtml
@@ -6,8 +6,16 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"	
 	template="WEB-INF/facelets/templates/Layout.xhtml">
 	
+	
 	<!-- template="WEB-INF/facelets/templates/defaultLayout.xhtml"  -->
-
+	<ui:define name="js">
+		<script type="text/javascript"
+			src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"></script>
+		<script type="text/javascript"
+			src="https://maps.googleapis.com/maps/api/js?v=3&sensor;=true"></script>
+	</ui:define>
+	
+	
 	<ui:define name="encabezado">
 		<ui:include src="WEB-INF/facelets/header/headerAdmin.xhtml" />
 	</ui:define>			
