--- a/LPEnBici/WebContent/WEB-INF/facelets/body/bodyLoginAdmin.xhtml
+++ b/LPEnBici/WebContent/WEB-INF/facelets/body/bodyLoginAdmin.xhtml
@@ -9,27 +9,23 @@
       
 <h:head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-
-<!-- 	<script
+ 	<script
 		src="http://maps.google.com/maps?file=api&amp;v=2&amp;
 key=ABQIAAAAxrVS1QxlpJHXxQ2Vxg2bJBT2yXp_ZAY8_ufC3CFXhHIE1NvwkxS9AOPy_YJl48ifAy4mq6I8SgK8fg"
 		type="text/javascript">
 		
-	</script> -->
+	</script> 
 	
-	<script type="text/javascript"
-		src="http://maps.google.com/maps?file=api&amp;v=2&amp;
-		key=ABQIAAAAeb_IK_wEDqBzexae-bhG6hReCZLzLEJSKxaYmbwBuovNMhDBtRQ0fdyx2KOKsZLPlngeXILMy7n9Sg">
-</script>
 </h:head>
       
 <h:body>
-<h:form>
-		<m:map width="90%" height="90%" latitude="-34.921369" longitude="-57.954431" zoom="15" >
+<h:form >
+		<m:map width="500px" height="500px" latitude="-34.921369" longitude="-57.954431" zoom="14" >
 
 			<ui:repeat var="estacion" value="#{EstacionBean.estacionesNoEliminadas}">
 				<m:marker latitude="#{estacion.lat}" longitude="#{estacion.lon}">
-					<m:htmlInformationWindow htmlText="Iam #{estacion.nombre}" />
+					<m:htmlInformationWindow htmlText="#{estacion.informacion()}" />
+					<m:icon imageURL="img/bikeflag.png" width="25" height="25" shadowHeight="40"  shadowWidth="40" />
 				</m:marker>
 			</ui:repeat>	
 
