--- a/LPEnBici/WebContent/WEB-INF/facelets/body/bodyAlquilerUsuario.xhtml
+++ b/LPEnBici/WebContent/WEB-INF/facelets/body/bodyAlquilerUsuario.xhtml
@@ -29,7 +29,7 @@
 		<p:dataTable var="alquiler"
 			value="#{PersonaBean.listaAlquileres}"
 			widgetVar="tablaAlquileres"
-			emptyMessage="No se encontraron bicicletas con ese criterio."
+			emptyMessage="No se encontraron alquileres con ese criterio."
 			filteredValue="#{PersonaBean.alquileresFiltrados}">
 
 
