--- a/LPEnBici/WebContent/WEB-INF/facelets/body/bodyEstacionesUsuario.xhtml
+++ b/LPEnBici/WebContent/WEB-INF/facelets/body/bodyEstacionesUsuario.xhtml
@@ -27,7 +27,7 @@
 
 		<!-- 		<p:dataTable var="usuario" value="#{PersonaBean.usuarios}" -->
 		<p:dataTable var="estacion"
-			value="#{EstacionBean.estacionesNoEliminadas}"
+			value="#{EstacionBean.estacionesOperativas}"
 			widgetVar="tablaEstacion"
 			emptyMessage="No se encontraron estaciones con ese criterio."
 			filteredValue="#{EstacionBean.estacionesFiltradas}">
