--- a/LPEnBici/WebContent/WEB-INF/facelets/body/bodyLoginAdmin.xhtml
+++ b/LPEnBici/WebContent/WEB-INF/facelets/body/bodyLoginAdmin.xhtml
@@ -20,7 +20,7 @@ key=ABQIAAAAxrVS1QxlpJHXxQ2Vxg2bJBT2yXp_ZAY8_ufC3CFXhHIE1NvwkxS9AOPy_YJl48ifAy4m
       
 <h:body>
 <h:form >
-		<m:map width="500px" height="500px" latitude="-34.921369" longitude="-57.954431" zoom="14" >
+		<m:map width="1000" height="500" scrollwheel="true" latitude="-34.921369" longitude="-57.954431" zoom="14" >
 
 			<ui:repeat var="estacion" value="#{EstacionBean.estacionesNoEliminadas}">
 				<m:marker latitude="#{estacion.lat}" longitude="#{estacion.lon}">
