--- a/LPEnBici/WebContent/WEB-INF/facelets/body/bodyPanelAdmin.xhtml
+++ b/LPEnBici/WebContent/WEB-INF/facelets/body/bodyPanelAdmin.xhtml
@@ -73,12 +73,15 @@
 
 				<p:menuitem value="Listado" icon="ui-icon-star"
 					outcome="AdministracionEstaciones.xhtml" />
+				<p:menuitem value="Mapa" icon="ui-icon-star"
+					outcome="LoginAdministrador.xhtml" />
 				<p:menuitem value="Nueva estacion" outcome="AltaEstacion.xhtml"
 					icon="ui-icon-star" />
 			</p:submenu>
 			<p:separator />
 			<p:submenu label="Estadisticas">
-				<p:menuitem value="Estadisticas" outcome="EstadisticasAdmin.html"
+				<!-- <p:menuitem value="Estadisticas" outcome="EstadisticasAdmin.html" -->
+				<p:menuitem value="Estadisticas" outcome="AdministracionEstadistica.xhtml"
 					icon="ui-icon-star" />
 			</p:submenu>
 		</p:panelMenu>
