--- a/LPEnBici/WebContent/WEB-INF/facelets/body/bodyPanelUsuario.xhtml
+++ b/LPEnBici/WebContent/WEB-INF/facelets/body/bodyPanelUsuario.xhtml
@@ -57,7 +57,9 @@
 		<p:panelMenu style="width:200px;">					
 			<p:submenu label="Estaciones">
 				<p:menuitem value="Listado" outcome="EstacionesUsuario.xhtml"
-				icon="ui-icon-star" />				
+				icon="ui-icon-star" />		
+				<p:menuitem value="Mapa" outcome="LoginUsuario.xhtml"
+				icon="ui-icon-star" />		
 			</p:submenu>
 			<p:separator />	
 			<p:submenu label="Alquileres">
