--- a/LPEnBici/WebContent/WEB-INF/facelets/body/bodyLoginUsuario.xhtml
+++ b/LPEnBici/WebContent/WEB-INF/facelets/body/bodyLoginUsuario.xhtml
@@ -20,9 +20,9 @@ key=ABQIAAAAxrVS1QxlpJHXxQ2Vxg2bJBT2yXp_ZAY8_ufC3CFXhHIE1NvwkxS9AOPy_YJl48ifAy4m
       
 <h:body>
 <h:form >
-		<m:map width="500px" height="500px" latitude="-34.921369" longitude="-57.954431" zoom="14" >
+		<m:map width="1000" height="500"  scrollwheel="true" latitude="-34.921369" longitude="-57.954431" zoom="14" >
 
-			<ui:repeat var="estacion" value="#{EstacionBean.estacionesNoEliminadas}">
+			<ui:repeat var="estacion" value="#{EstacionBean.estacionesOperativas}">
 				<m:marker latitude="#{estacion.lat}" longitude="#{estacion.lon}">
 					<m:htmlInformationWindow htmlText="#{estacion.informacion()}" />
 					<m:icon imageURL="img/bikeflag.png" width="25" height="25" shadowHeight="25"  shadowWidth="40" />
