--- a/LPEnBici/WebContent/WEB-INF/facelets/body/bodyPanelAdmin.xhtml
+++ b/LPEnBici/WebContent/WEB-INF/facelets/body/bodyPanelAdmin.xhtml
@@ -79,6 +79,13 @@
 					icon="ui-icon-star" />
 			</p:submenu>
 			<p:separator />
+			<p:submenu label="Alquileres">
+				<p:menuitem value="Listado de Activos" icon="ui-icon-star"
+					outcome="AdministracionAlquileresActivos.xhtml" />
+				<p:menuitem value="Listado de Historicos" icon="ui-icon-star"
+					outcome="AdministracionAlquileresHistoricos.xhtml" />						
+			</p:submenu>
+			<p:separator />
 			<p:submenu label="Estadisticas">
 				<!-- <p:menuitem value="Estadisticas" outcome="EstadisticasAdmin.html" -->
 				<p:menuitem value="Estadisticas" outcome="AdministracionEstadistica.xhtml"
