--- a/LPEnBici/WebContent/WEB-INF/facelets/body/bodyPanelUsuario.xhtml
+++ b/LPEnBici/WebContent/WEB-INF/facelets/body/bodyPanelUsuario.xhtml
@@ -63,8 +63,10 @@
 			</p:submenu>
 			<p:separator />	
 			<p:submenu label="Alquileres">
-				<p:menuitem value="Listado" outcome="AlquileresUsuario.xhtml"
-				icon="ui-icon-star" />				
+				<p:menuitem value="Listado de Activos" outcome="AlquileresUsuario.xhtml"
+				icon="ui-icon-star" />
+				<p:menuitem value="Listado de Historicos" outcome="AlquileresHistoricosUsuario.xhtml"
+				icon="ui-icon-star" />					
 			</p:submenu>		
 		</p:panelMenu>
 	</h:form>
